--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
-    "gsap": "^3.8.0",
+    "gsap": "npm:@gsap/shockingly@^3.8.0",
     "lrud": "^8.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
