--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@lottiefiles/lottie-interactivity": "^1.1.0",
-    "@lottiefiles/lottie-player": "^1.4.4",
+    "@lottiefiles/lottie-interactivity": "^1.3.2",
+    "@lottiefiles/lottie-player": "^1.5.4",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,6 +15,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lottie-player": "^1.4.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.2",
