custom URL for gh-pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "animation-demo",
-  "homepage": "http://commander-clifford.github.io/animation-demo",
+  "homepage": "https://animations.clifford.codes/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
